added abstract, introduction, and discussion boilerplate. Also fixed some typos and formatting.

--- a/WorkSpace/Paper/Paper.ipynb
+++ b/WorkSpace/Paper/Paper.ipynb
@@ -87,18 +87,14 @@
     "% ABSTRACT \n",
     "\n",
     "\\begin{abstract}\n",
-    "This document is a model and instructions for \\LaTeX.\n",
-    "This and the IEEEtran.cls file define the components of your paper [title, text, heads, etc.]. *CRITICAL: Do Not Use Symbols, Special Characters, Footnotes, \n",
-    "or Math in Paper Title or Abstract.\n",
-    "This document is a model and instructions for \\LaTeX.\n",
-    "This and the IEEEtran.cls file define the components of your paper [title, text, heads, etc.]. *CRITICAL: Do Not Use Symbols, Special Characters, Footnotes, \n",
-    "or Math in Paper Title or Abstract.\n",
-    "This document is a model and instructions for \\LaTeX.\n",
-    "This and the IEEEtran.cls file define the components of your paper [title, text, heads, etc.]. *CRITICAL: Do Not Use Symbols, Special Characters, Footnotes, \n",
-    "or Math in Paper Title or Abstract.\n",
-    "This document is a model and instructions for \\LaTeX.\n",
-    "This and the IEEEtran.cls file define the components of your paper [title, text, heads, etc.]. *CRITICAL: Do Not Use Symbols, Special Characters, Footnotes, \n",
-    "or Math in Paper Title or Abstract.\n",
+    "Sample Abstract:\n",
+    "OBJECTIVE: The role of antibiotic therapy in managing acute bacterial sinusitis (ABS) in children is controversial. The purpose of this study was to determine the effectiveness of high-dose amoxicillin/potassium clavulanate in the treatment of children diagnosed with ABS.\n",
+    "\n",
+    "METHODS: This was a randomized, double-blind, placebo-controlled study. Children 1 to 10 years of age with a clinical presentation compatible with ABS were eligible for participation. Patients were stratified according to age (<6 or ≥6 years) and clinical severity and randomly assigned to receive either amoxicillin (90 mg/kg) with potassium clavulanate (6.4 mg/kg) or placebo. A symptom survey was performed on days 0, 1, 2, 3, 5, 7, 10, 20, and 30. Patients were examined on day 14. Children’s conditions were rated as cured, improved, or failed according to scoring rules.\n",
+    "\n",
+    "RESULTS: Two thousand one hundred thirty-five children with respiratory complaints were screened for enrollment; 139 (6.5%) had ABS. Fifty-eight patients were enrolled, and 56 were randomly assigned. The mean age was 6630 months. Fifty (89%) patients presented with persistent symptoms, and 6 (11%) presented with nonpersistent symptoms. In 24 (43%) children, the illness was classified as mild, whereas in the remaining 32 (57%) children it was severe. Of the 28 children who received the antibiotic, 14 (50%) were cured, 4 (14%) were improved, 4(14%) experienced treatment failure, and 6 (21%) withdrew. Of the 28children who received placebo, 4 (14%) were cured, 5 (18%) improved, and 19 (68%) experienced treatment failure. Children receiving the antibiotic were more likely to be cured (50% vs 14%) and less likely to have treatment failure (14% vs 68%) than children receiving the placebo.\n",
+    "\n",
+    "CONCLUSIONS: ABS is a common complication of viral upper respiratory infections. Amoxicillin/potassium clavulanate results in significantly more cures and fewer failures than placebo, according to parental report of time to resolution.” (9)\n",
     "\n",
     "\\end{abstract}\n"
    ]
@@ -119,7 +115,24 @@
    "metadata": {},
    "source": [
     "% INTRODUCTION SECTION\n",
-    "\\section{Introduction}\n"
+    "\\section{Introduction}\n",
+    "Observation:\n",
+    "\n",
+    "Society relies on Pseudo-random numbers for a multitude of reasons. Whether the usecases fall in Information Security or, more broadly, modeling and simulation, we think it is important to not only push the boundary for the modern pseudo random number directly, but to also analyze the history of pseudo randomness to aide in that effort.\n",
+    "\n",
+    "Whether true randomness is a inhibition of the human perception or not, there is clear need to push the modern pseudo-random number closer to converging on perceived \"true\" randomness.\n",
+    "\n",
+    "Questions/Aim:\n",
+    "\n",
+    "To train a neural net to predict PRNs from a chosen PRNGs output. We aim to train neural nets to predict values of assigned PRNGs and track attributes of each to make generalized conclusions about the development of PRNGs with respect to time and any PRN correlations we uncover.\n",
+    "\n",
+    "Hypotheses:\n",
+    "\n",
+    "1) We predict there will be a positive trend over time on the cryptographic strength of each subsequent PRNG, given the nature of the increasing importance of stronger PRNGs.\n",
+    "\n",
+    "2) We also predict that as we get into cryptographically stronger generation methods, our prediction success rates (even with learning) will be less effective.\n",
+    "\n",
+    "3) We expect to uncover correlations in Pseudo-random numbers based on each individual generator, and aim to extract more generalized correlations between generators themselves."
    ]
   },
   {
@@ -292,10 +305,10 @@
     "\n",
     "\n",
     "Given an enumerated set, $\\mathbb{N}$,\n",
-    "where $prng$ is the chosen PRNG, $S_n$ is nth seed in the iteration, and $k$ is the length of the desired output vector ($\\mathbb{L}_n$) of $prng$,\n",
+    "where $prng$ is the chosen PRNG, $S_n$ is $n$th seed in the iteration, and $k$ is the length of the desired output vector ($\\mathbb{L}_n$) of $prng$,\n",
     "$\\mathbb{X}_n$ represents an enumerated set containing $n$ sets of $k-1$ values generated from a PRNG ($prng$) and each $\\mathbb{X}_n$ set is dervied from a different seed. $\\mathbb{Y}_n$ represents a set containing $n$ sets of $k$th values with a direct mapping to each $\\mathbb{X}_n$ such that $\\mathbb{X}_n \\mapsto \\mathbb{Y}_n$. $P$ a predictor function that represents a convolutional neural network, which takes in $\\mathbb{X}_n$ and $\\mathbb{Y}_n$, yields a new set $\\mathbb{B}_n$ implied from $\\mathbb{X}_n$, where the model trains $\\mathbb{B}_n$ to be similar or equal to $\\mathbb{Y}_n$ based on back-propagation due to previous predictions, thus using supervised learning to build a regression model.\n",
     "\n",
-    "For a simplified graphical representation of the latter description, please reference the predictive model in Figure ~\\ref{fig:Predictive Model}, the simplified experimental model in Figure ~\\ref{fig:Simplified Experimental Model} , and the granular view of the experimental model in Figure ~\\ref{fig:Granular Experimental Model}.\n",
+    "For a simplified graphical representation of the latter description, please reference the predictive model in Figure~\\ref{fig:Predictive Model}, the simplified experimental model in Figure~\\ref{fig:Simplified Experimental Model} , and the granular view of the experimental model in Figure~\\ref{fig:Granular Experimental Model}.\n",
     "\n",
     "\n",
     "\\begin{figure}[H]\n",
@@ -315,7 +328,7 @@
     "\\label{fig:Predictive Model}\n",
     "\\end{figure}\n",
     "\n",
-    "Referencing Figure ~\\ref{fig:Predictive Model}, which is a visualization of the layer stack we used for the predictive network in each trial of the experiment, it \"consists of four stacked convolutional layers, each with 4 filters, kernel size 2, and stride 1, followed by a max pooling layer and two FCFFlayers with 4 and 1 units, respectively. The stack of convolutional layers allow the network to discover complex patterns in the input.\" \\cite{debernardi2018pseudo} Explain here how/why we used that research's dicriminator model in our experiment exactly, except we implemented Relus instead of leaky-relus. Talk about the input xdata and ydata shape and reference the granular model Figure ~\\ref{fig:Granular Experimental Model} for detail on how these data are aggregated.\n",
+    "Referencing Figure ~\\ref{fig:Predictive Model}, which is a visualization of the layer stack we used for the predictive network in each trial of the experiment, it \"consists of four stacked convolutional layers, each with 4 filters, kernel size 2, and stride 1, followed by a max pooling layer and two FCFF layers with 4 and 1 units, respectively. The stack of convolutional layers allow the network to discover complex patterns in the input.\" \\cite{debernardi2018pseudo} Explain here how/why we used that research's dicriminator model in our experiment exactly, except we implemented Relus instead of leaky-relus. Talk about the input xdata and ydata shape and reference the granular model Figure ~\\ref{fig:Granular Experimental Model} for detail on how these data are aggregated.\n",
     "\n",
     "\n",
     "\n",
@@ -412,7 +425,21 @@
    "source": [
     "% DISCUSSION SECTION\n",
     "\\section{Discussion}\n",
-    "Start typing here her is Start typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her isStart typing here her is"
+    "\n",
+    "Below are general notes for the discussion section....\n",
+    "\n",
+    "Mistakes Made / how the research could be made more robust.\n",
+    "\n",
+    "uncertainties\n",
+    "\n",
+    "Practical Application:\n",
+    "A GAN method similar to this could be used in the future during a real-time prediction attack scenario. If attackers are somehow able to break a strong PRNG that is used to generate numbers for cryptographic methods, a method like this could be used as a defense mechanism to prevent (or slow down) further PRN generation cycles from being compromised.\n",
+    "\n",
+    "This provides a better framework for implementing new PRNGs, seed methods, and experimental designs... and fixing ours to be more mathematically accurate or more robust.\n",
+    "\n",
+    "With the results we obtained by doing mere 20 epochs, a lot heavier training and testing could be implemented with powerful computation power.\n",
+    "\n",
+    "The base code, such as seeding and PRNG code can also be significantly improved upon to be more mathematically accurate and produce better training and testing of models...\n"
    ]
   },
   {
