pre-final draft and milestone

--- a/WorkSpace/Milestones/Project Milestones.ipynb
+++ b/WorkSpace/Milestones/Project Milestones.ipynb
@@ -314,7 +314,7 @@
     "   \n",
     "   - Finish testing and bug fixes\n",
     "   - execute the experiment\n",
-    "   - ensure documentation integrety\n",
+    "   - ensure documentation integrity\n",
     "   - complete the paper\n",
     "   - make sure demo is working correctly\n",
     "   - start working on presentation\n",
@@ -322,6 +322,89 @@
     " \n",
     "We have abstracted a lot of the details associated with each of these tasks (for the sake of being concise as per the rubric). These details are actively being discussed in the slack and among smaller chats.\n",
     "\n",
+    "## Rubric\n",
+    "- [X] Does your report have the necessary table, filled with the correct information? (4 points)\n",
+    "- [X] Does your report answer the questions above clearly and concisely? (4 points)\n",
+    "- [X] Does each team member have a role to play in helping to meet the goals of the next milestone? (4 points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Milestone 4 (Final Milestone) - Team 7 \n",
+    "### Due April 14th 2020\n",
+    "Spencer Arnold <br/>\n",
+    "Ryan Hines <br/>\n",
+    "Matthew Hawks <br/>\n",
+    "Jacob Anderson <br/>\n",
+    "Tae Kweon <br/>\n",
+    "Ali Najib <br/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deliverable Tracking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"display: block; float:left;\"/>\n",
+    "    <h3>Progress and Projections</h3>\n",
+    "    \n",
+    "| Deliverable | Percent Complete | Percent Complete By Next Milestone | Estimated Completion Date   | \n",
+    "|-------------|:-----:|:------------------------------------------|-------------------------|\n",
+    "| Code        |  100%  | n/a | n/a |\n",
+    "| Paper       |  100%   | n/a | n/a |\n",
+    "| Demo        |  100%   | n/a | n/a  |\n",
+    "| Presentation|  20%   | 80%  | May 5  |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **1. What deliverable goals established in the last milestone report were accomplished to the anticipated percentage?**\n",
+    "\n",
+    "We accomplished all main key deliverables in the last milestone, and since then, have ran the experiment, complied the results, and wrote the paper in draft increments. All of the below goals were accomplished to anticipated lengths. We hoped we would be further along on the presentation preparation; however, our time was largely dedicated to completing the paper\n",
+    "   \n",
+    "   \n",
+    "Goals Completed to 100%:\n",
+    "   \n",
+    "   - Finish testing and bug fixes\n",
+    "   - execute the experiment\n",
+    "   - ensure documentation integrity\n",
+    "   - complete the paper\n",
+    "   - make sure demo is working correctly\n",
+    "   - start working on presentation\n",
+    "\n",
+    "\n",
+    "### **2. What deliverable goals established in the last milestone report were were not accomplished to the anticipated percentage?**\n",
+    "\n",
+    "All goals were accomplished.\n",
+    "\n",
+    "### **3. What are the main deliverable goals to meet before the next milestone report, and who is working on them?**\n",
+    "Since this is the last milestone, I will define the things that will be done before May 5th. This includes\n",
+    "Testing the demo and completing and recording the presentation.\n",
+    "   \n",
     "## Rubric\n",
     "- [X] Does your report have the necessary table, filled with the correct information? (4 points)\n",
     "- [X] Does your report answer the questions above clearly and concisely? (4 points)\n",
