--- a/WorkSpace/Paper/References.bib
+++ b/WorkSpace/Paper/References.bib
@@ -44,8 +44,6 @@ numpages = {16},
 keywords = {GF(2m), m-sequences, TLP-sequences, matrix linear congruential generators, generalized feedback shift registers}
 }
 
-  
-
 @article{10.1145/63039.63042,
 author = {Park, S. K. and Miller, K. W.},
 title = {Random Number Generators: Good Ones Are Hard to Find},
@@ -64,17 +62,12 @@ pages = {1192–1201},
 numpages = {10}
 }
 
-  
-
 @misc{ParkMiller,
     author = "{Wikipedia contributors}",
     title = "Lehmer random number generator --- {Wikipedia}{,} The Free Encyclopedia",
     year = "2020",
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Lehmer_random_number_generator&oldid=950526808}",
-    note = "[Online; accessed 
-
-24-April-2020
-]"
+    note = "[Online; accessed 24-April-2020]"
   }
 
 @article{LEcuyer1999TablesOL,
@@ -119,8 +112,19 @@ numpages = {3}
     title = "Middle-square method --- {Wikipedia}{,} The Free Encyclopedia",
     year = "2020",
     url = "https://en.wikipedia.org/w/index.php?title=Middle-square_method&oldid=951418817",
-    note = "[Online; accessed 
+    note = "[Online; accessed 24-April-2020]"
+  }
 
-24-April-2020
-]"
+@misc{Markell94,
+    author = {Richard Markell},
+    title = {“Better than Bessel ” Linear Phase Filters for Data Communications},
+    year = {1994}
+}
+
+@misc{CNN,
+    author = "{Wikipedia contributors}",
+    title = "Convolutional neural network --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2020",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Convolutional_neural_network&oldid=953234856}",
+    note = "[Online; accessed 28-April-2020]"
   }
