--- a/WorkSpace/Paper/References.ipynb
+++ b/WorkSpace/Paper/References.ipynb
@@ -68,9 +68,7 @@
     "pages = {179–194},\n",
     "numpages = {16},\n",
     "keywords = {GF(2m), m-sequences, TLP-sequences, matrix linear congruential generators, generalized feedback shift registers}\n",
-    "}\n",
-    "\n",
-    "  "
+    "}"
    ]
   },
   {
@@ -93,9 +91,7 @@
     "month = oct,\n",
     "pages = {1192–1201},\n",
     "numpages = {10}\n",
-    "}\n",
-    "\n",
-    "  "
+    "}"
    ]
   },
   {
@@ -107,10 +103,7 @@
     "    title = \"Lehmer random number generator --- {Wikipedia}{,} The Free Encyclopedia\",\n",
     "    year = \"2020\",\n",
     "    howpublished = \"\\url{https://en.wikipedia.org/w/index.php?title=Lehmer_random_number_generator&oldid=950526808}\",\n",
-    "    note = \"[Online; accessed \n",
-    "\n",
-    "24-April-2020\n",
-    "]\"\n",
+    "    note = \"[Online; accessed 24-April-2020]\"\n",
     "  }"
    ]
   },
@@ -174,10 +167,31 @@
     "    title = \"Middle-square method --- {Wikipedia}{,} The Free Encyclopedia\",\n",
     "    year = \"2020\",\n",
     "    url = \"https://en.wikipedia.org/w/index.php?title=Middle-square_method&oldid=951418817\",\n",
-    "    note = \"[Online; accessed \n",
-    "\n",
-    "24-April-2020\n",
-    "]\"\n",
+    "    note = \"[Online; accessed 24-April-2020]\"\n",
+    "  }"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "@misc{Markell94,\n",
+    "    author = {Richard Markell},\n",
+    "    title = {“Better than Bessel ” Linear Phase Filters for Data Communications},\n",
+    "    year = {1994}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "@misc{CNN,\n",
+    "    author = \"{Wikipedia contributors}\",\n",
+    "    title = \"Convolutional neural network --- {Wikipedia}{,} The Free Encyclopedia\",\n",
+    "    year = \"2020\",\n",
+    "    howpublished = \"\\url{https://en.wikipedia.org/w/index.php?title=Convolutional_neural_network&oldid=953234856}\",\n",
+    "    note = \"[Online; accessed 28-April-2020]\"\n",
     "  }"
    ]
   }
