--- a/WorkSpace/Paper/Paper.ipynb
+++ b/WorkSpace/Paper/Paper.ipynb
@@ -207,7 +207,7 @@
     "\n",
     "\\noindent\\textbf{Linear Congruential}:\n",
     "\\begin{itemize}\n",
-    "    \\item A linear congruential generator is a PRNG that represents an \"additive  congruential  method\", with foundations in improving upon \"unsatisfactory\" tests with entropy in fibonacci sequences. \\cite{10.1145/321008.321019}\n",
+    "    \\item A linear congruential generator is a PRNG that represents an \"additive congruential method\", with foundations in improving upon \"unsatisfactory\" tests with entropy in fibonacci sequences. \\cite{10.1145/321008.321019}\n",
     "\\end{itemize}\n",
     "Notes:\n",
     "\\begin{itemize}\n",
@@ -216,7 +216,7 @@
     "(e.g. if m is a power of 2, then c must be odd), \n",
     "so the value c=1 is commonly chosen.\n",
     "    \\item If c = 0, the generator is often called a multiplicative\n",
-    "congruential generator (MCG), or Lehmer RNG (which is used for our implementation). If c ≠ 0, the\n",
+    "congruential generator (MCG), or Lehmer RNG (which is used for our implementation). If c $\\neq$ 0, the\n",
     "method is called a mixed congruential generator.\n",
     "    \\item Parameters were chosen based on $2^32$ numbers in table 2 of the article \"Tables of linear congruential generators of different sizes and good lattice structure.\" \\cite{LEcuyer1999TablesOL}\n",
     "\\end{itemize}\n",
@@ -281,7 +281,7 @@
     "\n",
     "Given an enumerated set, $\\mathbb{N}$,\n",
     "where $prng$ is the chosen PRNG, $S_n$ is $n$th seed in the iteration, and $k$ is the length of the desired output vector ($\\mathbb{L}_n$) of $prng$,\n",
-    "$\\mathbb{X}_n$ represents an enumerated set containing $n$ sets of $k-1$ values generated from a PRNG ($prng$) and each $\\mathbb{X}_n$ set is derived from a different seed. $\\mathbb{Y}_n$ represents a set containing $n$ sets of $k$th values with a direct mapping to each $\\mathbb{X}_n$ such that $\\mathbb{X}_n \\mapsto \\mathbb{Y}_n$. $P$ a predictor function that represents a convolutional neural network, which takes in $\\mathbb{X}_n$ and $\\mathbb{Y}_n$, yields a new set $\\mathbb{B}_n$ implied from $\\mathbb{X}_n$, where the model trains $\\mathbb{B}_n$ to be similar or equal to $\\mathbb{Y}_n$ based on back-propagation due to previous predictions, thus using supervised learning to build a regression model.\n",
+    "$\\mathbb{X}_n$ represents an enumerated set containing $n$ sets of $k-1$ values generated from a PRNG ($prng$) and each $\\mathbb{X}_n$ set is derived from a different seed. $\\mathbb{Y}_n$ represents a set containing $n$ sets of $k$th values with a direct mapping to each $\\mathbb{X}_n$ such that $\\mathbb{X}_n \\mapsto \\mathbb{Y}_n$. $P$ is a predictor function that represents a convolutional neural network, which takes in $\\mathbb{X}_n$ and $\\mathbb{Y}_n$, yields a new set $\\mathbb{B}_n$ implied from $\\mathbb{X}_n$, where the model trains $\\mathbb{B}_n$ to be similar or equal to $\\mathbb{Y}_n$ based on back-propagation due to previous predictions, thus using supervised learning to build a regression model.\n",
     "\n",
     "For a simplified graphical representation of the latter description, please reference the predictive model in Figure~\\ref{fig:Predictive Model}, the simplified experimental model in Figure~\\ref{fig:Simplified Experimental Model}, and the granular view of the experimental model in Figure~\\ref{fig:Granular Experimental Model}.\n",
     "\n",
@@ -432,7 +432,7 @@
     "\n",
     "While developing the PRNG implementations we were having problems with the seed generation in general and recognize that a more robust seeding method could be created to eliminate the possibility for the seed to \"converge\" to 0. We also realize this could be a bug in the experimental code, but served nothing more than an inconvenience in the execution of the experiment. On occasion, we also experienced convergence to zero while using the middle-square PRNG implementation. On occasion the middle square implementation will converge to 0 and will cause the network training to train on convergent data, leading to faulty results when testing the predictive network. This in large has to do with the Middle-Square algorithm being known to converge given certain numbers.\n",
     "\n",
-    "Other than slight ambiguity in errors, we realize that our PRNG methods might not be perfect implementations. Some generators have tight tolerances for parameters and algorithmic behaviors. While we believe that our implementations are sound, they could be checked and improved upon by using tests of statistical randomnesses, such as the National Institute of Standards and Technology (NIST) provides. \n",
+    "Other than slight ambiguity in errors, we realize that our PRNG methods might not be perfect implementations. Some generators have tight tolerances for parameters and algorithmic behaviors. While we believe that our implementations are sound, they could be checked and improved upon by using tests of statistical randomnesses, like the National Institute of Standards and Technology (NIST) provides. \n",
     "Different seeding methods could also provide different results, given that our seeding method was relatively linear and weak in design.\n",
     "\n",
     "Through working on this research, we also developed an architecture that could be reused by other researchers in the future for experimentation on improved seeding methods and improved generation methods. In addition, we only ran the experiment for 30 epochs, so more computational time could be used to improve our results.\n",
