--- a/WorkSpace/Paper/Paper.tex
+++ b/WorkSpace/Paper/Paper.tex
@@ -202,7 +202,7 @@ addresses this problem.
 \end{itemize}
 Notes:
 \begin{itemize}
-    \item "In 1988, Park and Miller \cite{10.1145/63039.63042}, suggested a Lehmer RNG with particular parameters m = 231 − 1 = 2,147,483,647 (a Mersenne prime M31) and a = 75 = 16,807 (a primitive root modulo M31), now known as MINSTD." \cite{ParkMiller}
+    \item "In 1988, Park and Miller \cite{10.1145/63039.63042}, suggested a Lehmer RNG with particular parameters $m = 2^{31}-1 = 2,147,483,647$ (a Mersenne prime M31) and $a = 7^{5} = 16,807$ (a primitive root modulo M31), now known as MINSTD." \cite{ParkMiller}
 \end{itemize}
 
 
